--- a/style.css
+++ b/style.css
@@ -25,10 +25,6 @@ textarea{
   white-space: pre-wrap;
 }
 
-.time-block{
-  text-align: center;
-  border-radius: 15px;
-}
 
 .row {
   white-space: pre-wrap;
@@ -42,30 +38,21 @@ textarea{
   border-top: 1px dashed #000000;
 }
 
-.past {
-  background-color: #d3d3d3;
-  color: white;
-}
 
-.present {
-  background-color: #ff6961;
-  color: white;
-}
-
-.future {
-  background-color: #77dd77;
-  color: white;
-}
-
-.saveBtn {
+.save-button {
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
+  float: right;
+  height: 67px;
+  color:coral;
+  font-weight: 600;
+  
+  
 }
-
-.saveBtn i:hover {
+.save-button i:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
 }
@@ -73,15 +60,24 @@ textarea{
   width: 100%;
   border: 5px solid black;
   padding: 50px;
-}
-
-.save-button {
-  float: right;
-  height: 67px;
-  background-color: blue;
-  color:coral;
+  border-radius: 15px;
 }
 
 #currentDay.lead {
   font-size: 50px;
+}
+
+.past {
+  background-color: grey;
+  color: black;
+}
+
+.present {
+  background-color: fuchsia;
+  color: black;
+}
+
+.future {
+  background-color: greenyellow;
+  color: black;
 }
